forms3 – fix busy yellow checkbox outline on Safari

--- a/resources/public/user/electric-forms.css
+++ b/resources/public/user/electric-forms.css
@@ -201,10 +201,15 @@ form :is(input, button)[type=submit][data-tx-status=accepted]:not([aria-disabled
     background-color: rgb(34 197 94); /* tw text-green-500 */
 }
 
-form input:is([type=checkbox],[type=radio])[aria-busy=true] {
-    /* Can't color or background-color native checkboxes
-       border and outline are tricky to get right without messing up keyboard nav */
+form input:is([type=checkbox],[type=radio])[aria-busy=true]{
+    /* Can't color or background-color native checkboxes border and outline are
+       tricky to get right without messing up keyboard nav. Not supported on safari.
+   */
     box-shadow: 0 0 0.2rem 0.2rem yellow; /* simulate a border */
     outline: none;
 }
 
+_::-webkit-full-page-media, _:future, :root /* Safari detector – selector on next line only applies to Safari https://stackoverflow.com/a/25975282 */
+form input:is([type=checkbox],[type=radio])[aria-busy=true] {
+    outline: 3px yellow solid;
+}
